@@ -10,6 +10,10 @@ Version SVN trunk
       as one single monolithic gig file. In case .gig file is >= 2GB expect a
       large monolithic file, otherwise if .gig file is < 2 GB check for
       "extension" files (.gx01, .gx02, ...) instead.
+    - fixed Region::UpdateUpdateVelocityTable() which did not work correctly
+      if there were dimensions after the velocity dimension: it only created
+      valid velocity tables for cases of dimensions lower than the velocity
+      dimension.
 
   * src/DLS.cpp, src/DLS.h:
     - Sample: wave pool offsets are now 64 bits (to allow support for files
@@ -31,6 +35,10 @@ Version SVN trunk
   * src/tools/korg2gig.cpp:
     - fixed c++11 narrowing warnings
     - fixed fine tuning which was not translated at all
+
+  * src/tools/gigdump.cpp:
+    - additionally print VelocityUpperLimit and DimensionUpperLimits of all
+      dimension regions
 
   * packaging changes:
     - Automake: set environment variable GCC_COLORS=auto to allow GCC to
